# ChangeLog for gnome-extra/acme
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/acme/ChangeLog,v 1.17 2003/08/04 18:18:00 gmsoft Exp $

  15 Jul 2003; Todd Sunderlin <todd@gentoo.org> acme-2.0.2.ebuild:
  Marked stable for sparc

  30 Jun 2003; Bartosch Pixa <darkspecter@gentoo.org> acme-2.0.2.ebuild:
  set ppc in keywords

*acme-2.0.4 (14 May 2003)

  04 Aug 2003; Guy Martin <gmsoft@gentoo.org> acme-2.0.4.ebuild :
  Marked stable on hppa.

  05 Jul 2003; Guy Martin <gmsoft@gentoo.org> acme-2.0.4.ebuild :
  Added ~hppa to KEYWORDS.

  14 May 2003; foser <foser@gentoo.org> acme-2.0.4.ebuild :
  New version, fixed IUSE and minor deps cleanup

*acme-2.0.3 (14 Apr 2003)

  05 Jul 2003; Guy Martin <gmsoft@gentoo.org> acme-2.0.3.ebuild :
  Added hppa to KEYWORDS.

  14 Apr 2003; foser <foser@gentoo.org> acme-2.0.3.ebuild :
  New version

*acme-2.0.2 (2 Feb 2003)

  01 Mar 2003; Jason Wever <weeve@gentoo.org> acme-2.0.2.ebuild:
  Added ~sparc to keywords.

  21 Feb 2003; Aron Griffis <agriffis@gentoo.org> acme-2.0.2.ebuild :
  Mark stable on Alpha

  20 Feb 2003; Aron Griffis <agriffis@gentoo.org> acme-2.0.2.ebuild :
  Add ~alpha to KEYWORDS

  02 Feb 2003; foser <foser@gentoo.org> acme-2.0.2.ebuild :
  New version, some dep fixes (#13828)

*acme-2.0 (14 Jan 2003)

  14 Jan 2003; foser <foser@gentoo.org> acme-2.0.ebuild :
  New version, fixed deps (#13918)
  Now uses gnome.org eclass for SRC_URI

*acme-1.99.12 (17 Dec 2002)

  17 Dec 2002; foser <foser@gentoo.org> acme-1.99.12.ebuild :
  New version, fixed deps

*acme-1.99.10 (07 Dec 2002)

  07 Dec 2002; foser <foser@gentoo.org> acme-1.99.10.ebuild :
  New version

*acme-1.99.9 (28 Oct 2002)

  28 Oct 2002; foser <foser@gentoo.org> acme-1.99.9.ebuild :
  New version

*acme-1.99.8 (24 Oct 2002)

  24 Oct 2002; foser <foser@gentoo.org> Changelog, acme-1.99.8 :

  New package. Thanks to Marco Pfattner <gentoo@pffatner.de>