@@ -1,8 +1,8 @@
-MD5 ef38d7b0d901edd5cf55601ff5a1c84d files/digest-acme-2.0.3 63
+MD5 01f88896ccd982fc38dc3e6afdaed024 acme-2.0.4.ebuild 703
+MD5 b40eddb0cf4b9decca94d7063c57da6a acme-2.0.6.ebuild 700
+MD5 c9e3c35f27b4faaadc9ad80f9a68ba61 acme-2.0.2.ebuild 722
+MD5 0408db412cb0a1ef0f3e2babd7bc01fe ChangeLog 2125
+MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 9a494de1e1d3973f868fce5ad5344943 files/digest-acme-2.0.2 63
 MD5 7d7597590651059000402867d55b073a files/digest-acme-2.0.4 63
-MD5 8b51759335f3c0ea2e142546b9d9b501 acme-2.0.3.ebuild 735
-MD5 c9e3c35f27b4faaadc9ad80f9a68ba61 acme-2.0.2.ebuild 722
-MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 19628e6fef14c35e9f3124295e778a25 ChangeLog 1975
-MD5 01f88896ccd982fc38dc3e6afdaed024 acme-2.0.4.ebuild 703
+MD5 9f4c1e3a2b25486893e93376494fb0a1 files/digest-acme-2.0.6 63
