@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/acme
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/acme/ChangeLog,v 1.17 2003/08/04 18:18:00 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/acme/ChangeLog,v 1.18 2003/08/10 11:38:01 foser Exp $
+
+*acme-2.0.6 (10 Aug 2003)
+
+  10 Aug 2003; foser <foser@gentoo.org> acme-2.0.6.ebuild :
+  New version, removed redundant gconf dep, fixed R(DEP) order
 
   15 Jul 2003; Todd Sunderlin <todd@gentoo.org> acme-2.0.2.ebuild:
   Marked stable for sparc
